# cerebri

./: README.md  west.yml
app/b3rb/: CMakeLists.txt  Kconfig  prj.conf
app/b3rb/boards/: native_sim.conf
app/b3rb/src/: auto.c  fsm.c  lighting.c  manual.c  movement.c
app/b3rb/src/casadi/.ipynb_checkpoints/: rover-checkpoint.py
include/cerebri/core/: common.h
lib/: CMakeLists.txt  Kconfig
lib/actuate/: CMakeLists.txt  Kconfig
lib/actuate/pwm/: main.c
lib/sense/: CMakeLists.txt  Kconfig
lib/synapse/: CMakeLists.txt  Kconfig
lib/synapse/eth_rx/src/: main.c
lib/synapse/eth_tx/src/: main.c
lib/synapse/topic/include/: synapse_shell_print.h  synapse_topic_list.h
lib/synapse/topic/src/: synapse_shell_print.c  synapse_topic.c  synapse_topic_list.c
